forth/test/fail/test_comptime_stack_underflow.af
use' ../../lang.af

fun: some_word + end
